<resources>
    <string name="app_name">~ B • I • N • G • E ~</string>
    <string name="register_movie_label">Register Movie</string>
    <string name="display_movies_label">Display Movies</string>
    <string name="favourites_label">Favourites</string>
    <string name="edit_movies_label">Edit Movies</string>
    <string name="search_label">Search</string>
    <string name="ratings_label">Ratings</string>
    <string name="enter_movie_hint">Enter title of movie</string>
    <string name="enter_year_hint">Enter year</string>
    <string name="enter_director_hint">Enter name of director</string>
    <string name="enter_actors_hint">Enter list of actors/actresses</string>
    <string name="enter_rating_hint">Enter rating</string>
    <string name="enter_review_hint">Enter review</string>
    <string name="search_hint">Enter movie title, director or actor</string>
    <string name="search_header_label">~ Search for movie details ~</string>
    <string name="look_up_label">Look Up</string>
    <string name="edit_movie_header_text"> ~ Edit the details of %1$s ~</string>
    <string name="search_result_label">"Search results for %1$s</string>
    <string name="not_found_text">Entered text cannot be found</string>
    <string name="register_your_movie">~ Register Your Movie ~</string>
    <string name="register_instructions_text">Enter the following details and click \'Save\'.</string>
    <string name="save_label">Save</string>
    <string name="display_movies_header">~ Your Movie List ~</string>
    <string name="add_to_favourites_label">Add to Favourites</string>
    <string name="display_list_instructions_text">Select the movies &amp; click the \'Add to Favourites\' button.</string>
    <string name="favourites_header">~ Favourites List ~</string>
    <string name="favourites_instructions_text">Deselect movies &amp; click the \'Save\' button to remove them from Favourites</string>
    <string name="edit_header">~ Edit Movies ~</string>
    <string name="edit_selection_instructions_text">Select the movie to be edited.</string>
    <string name="required_label">*Required</string>
    <string name="not_favourite_label">Not Favourite</string>
    <string name="movie_rating_label">Movie Rating</string>
    <string name="update_label">Update</string>
    <string name="ratings_header">~ Select a movie to get their IMDB rating ~</string>
    <string name="find_imdb_label">Find movie in IMDB</string>
    <string name="imdb_results_header">~ IMDB Results ~</string>
    <string name="movie_title_label">Movie Title: </string>
    <string name="rating_label">Rating: </string>
    <string name="image_label">Poster: </string>
    <string name="results_instruction_text">Click on the movie title to view its image</string>
</resources>