<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".FavouritesActivity">

    <LinearLayout
        android:id="@+id/favourites_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_save_favourites"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favourties_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/favourites_header"
            android:textColor="@color/font_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favourites_instruction_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/favourites_instructions_text"
            android:textColor="@color/font_color"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/listview_favourites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:onClick="saveFavourites"
        android:text="@string/save_label"
        android:textColor="@color/font_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color" />
</RelativeLayout>