<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/register_your_movie"
        android:textColor="@color/font_color"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_instructions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/register_instructions_text"
        android:textAllCaps="false"
        android:textColor="@color/font_color"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_save_movie"
        android:layout_below="@+id/register_instructions_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_movie_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_movie_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_year"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_year"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_year_hint"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_director"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_director"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_director_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_actor_list"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_actor_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="start|top"
                    android:hint="@string/enter_actors_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_rating"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_rating"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_rating_hint"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_review"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/font_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_review_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save_movie"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:onClick="onSaveButtonClick"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/save_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color" />

</RelativeLayout>